--- a/templates/maintenance/add_book.html
+++ b/templates/maintenance/add_book.html
@@ -15,9 +15,9 @@
                     {% for field in form %}
                     <div class="mb-3">
                         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                        <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
-                            id="{{ field.id_for_label }}" class="form-control" {% if field.field.required %}required{%
-                            endif %}>
+                        <input {% if field.field.required %}required{% endif %}
+                            type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
+                            id="{{ field.id_for_label }}" class="form-control">
                         {% if field.errors %}
                         <div class="text-danger small">
                             {{ field.errors.0 }}
