--- a/templates/maintenance/add_membership_old.html
+++ b/templates/maintenance/add_membership_old.html
@@ -27,9 +27,9 @@
                             {% endfor %}
                         </div>
                         {% else %}
-                        <input {% if field.field.required %}required{% endif %}
-                            type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
-                            id="{{ field.id_for_label }}" class="form-control">
+                        <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
+                            id="{{ field.id_for_label }}" class="form-control" {% if field.field.required %}required{%
+                            endif %}>
                         {% endif %}
                         {% if field.errors %}
                         <div class="text-danger small">
