--- a/templates/transactions/issue_book_old.html
+++ b/templates/transactions/issue_book_old.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load custom_filters %}
 
 {% block title %}Issue Book - Acxiom{% endblock %}
 
@@ -20,7 +19,7 @@
                         <select {% if field.field.required %}required{% endif %} name="{{ field.name }}"
                             id="{{ field.id_for_label }}" class="form-select">
                             {% for x, y in field.field.choices %}
-                            <option value="{{ x }}" {% if field.value|eq:x %}selected{% endif %}>{{ y }}</option>
+                            <option value="{{ x }}" {% if field.value==x %}selected{% endif %}>{{ y }}</option>
                             {% endfor %}
                         </select>
                         {% else %}
